pom updates (import package segments deleted..)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+agenda/agenda.client/.classpath
+agenda/agenda.client/.project
+agenda/agenda.client/.settings
+agenda/agenda.client/target
+agenda/agenda.gui/.classpath
+agenda/agenda.gui/.project
+agenda/agenda.gui/.settings
+agenda/agenda.gui/target
+agenda/agenda.ont/.classpath
+agenda/agenda.ont/.project
+agenda/agenda.ont/.settings
+agenda/agenda.ont/target
+agenda/agenda.pom/.project
+agenda/agenda.pom/.settings
+agenda/agenda.remote/.classpath
+agenda/agenda.remote/.project
+agenda/agenda.remote/.settings
+agenda/agenda.remote/target
+agenda/agendaEventSelection.client/.classpath
+agenda/agendaEventSelection.client/.project
+agenda/agendaEventSelection.client/.settings
+agenda/agendaEventSelection.client/target
+agenda/agendaEventSelection.ont/.classpath
+agenda/agendaEventSelection.ont/.project
+agenda/agendaEventSelection.ont/.settings
+agenda/agendaEventSelection.ont/target
 agenda/dm/.classpath
 agenda/dm/.project
 agenda/dm/.settings
