--- a/agenda/agenda.client/pom.xml
+++ b/agenda/agenda.client/pom.xml
@@ -92,19 +92,19 @@
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Activator>org.universAAL.agenda.client.Activator</Bundle-Activator>
 						<Export-Package>org.universAAL.agenda.client</Export-Package>
-						<Import-Package>
-							javax.xml.datatype, org.osgi.service.log,
-							org.universAAL.ontology.location.address,
-							org.universAAL.ontology.location.outdoor
-							,javax.swing,org.osgi.framework,
-							org.universAAL.agenda.ont,
-							org.universAAL.agenda.ont.service,
-							org.slf4j,org.universAAL.middleware.context,
-							org.universAAL.middleware.owl, org.universAAL.middleware.rdf,
-							org.universAAL.middleware.service,
-							org.universAAL.middleware.service.owl,
-							org.universAAL.middleware.service.owls.process,
-							org.universAAL.ontology.profile</Import-Package>
+<!--						<Import-Package>-->
+<!--							javax.xml.datatype, org.osgi.service.log,-->
+<!--							org.universAAL.ontology.location.address,-->
+<!--							org.universAAL.ontology.location.outdoor-->
+<!--							,javax.swing,org.osgi.framework,-->
+<!--							org.universAAL.agenda.ont,-->
+<!--							org.universAAL.agenda.ont.service,-->
+<!--							org.slf4j,org.universAAL.middleware.context,-->
+<!--							org.universAAL.middleware.owl, org.universAAL.middleware.rdf,-->
+<!--							org.universAAL.middleware.service,-->
+<!--							org.universAAL.middleware.service.owl,-->
+<!--							org.universAAL.middleware.service.owls.process,-->
+<!--							org.universAAL.ontology.profile</Import-Package>-->
 					</instructions>
 				</configuration>
 			</plugin>
