--- a/agenda/agenda.remote/pom.xml
+++ b/agenda/agenda.remote/pom.xml
@@ -124,10 +124,10 @@
 					</instructions>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-compiler-plugin</artifactId>-->
+<!--			</plugin>-->
 		</plugins>
 	</build>
 </project>
