--- a/agenda/agenda.server/pom.xml
+++ b/agenda/agenda.server/pom.xml
@@ -117,29 +117,29 @@
 						<Export-Package>org.universAAL.agenda.server</Export-Package>
 						<Private-Package>org.universAAL.agenda.server.unit_impl,
 							org.universAAL.agenda.server.database,org.universAAL.agenda.server.gui.wrapper</Private-Package>
-						<Import-Package>org.universAAL.middleware.context,
-							org.universAAL.middleware.context.owl,
-							org.universAAL.middleware.input,
-							org.universAAL.middleware.io.owl,
-							org.universAAL.middleware.io.rdf,
-							org.universAAL.middleware.output,
-							org.universAAL.middleware.owl,
-							org.universAAL.middleware.owl.supply,
-							org.universAAL.middleware.rdf,
-							org.universAAL.middleware.service,
-							org.universAAL.middleware.service.owls.process,
-							org.universAAL.middleware.service.owls.profile,
-							org.universAAL.middleware.util,
-							org.universAAL.ontology.profile,
-							org.universAAL.ontology.location.address,
-							org.universAAL.ontology.location.outdoor,
-
-							org.universAAL.agenda.ont,
-							org.universAAL.agenda.ont.service,
-
-							java.sql.*, javax.swing,
-							org.osgi.service.*, org.osgi.framework, javax.xml.*,
-							com.mysql.jdbc, org.slf4j</Import-Package>
+<!--						<Import-Package>org.universAAL.middleware.context,-->
+<!--							org.universAAL.middleware.context.owl,-->
+<!--							org.universAAL.middleware.input,-->
+<!--							org.universAAL.middleware.io.owl,-->
+<!--							org.universAAL.middleware.io.rdf,-->
+<!--							org.universAAL.middleware.output,-->
+<!--							org.universAAL.middleware.owl,-->
+<!--							org.universAAL.middleware.owl.supply,-->
+<!--							org.universAAL.middleware.rdf,-->
+<!--							org.universAAL.middleware.service,-->
+<!--							org.universAAL.middleware.service.owls.process,-->
+<!--							org.universAAL.middleware.service.owls.profile,-->
+<!--							org.universAAL.middleware.util,-->
+<!--							org.universAAL.ontology.profile,-->
+<!--							org.universAAL.ontology.location.address,-->
+<!--							org.universAAL.ontology.location.outdoor,-->
+<!---->
+<!--							org.universAAL.agenda.ont,-->
+<!--							org.universAAL.agenda.ont.service,-->
+<!---->
+<!--							java.sql.*, javax.swing,-->
+<!--							org.osgi.service.*, org.osgi.framework, javax.xml.*,-->
+<!--							com.mysql.jdbc, org.slf4j</Import-Package>-->
 					</instructions>
 				</configuration>
 			</plugin>
