--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ agenda/agenda.remote/.classpath
 agenda/agenda.remote/.project
 agenda/agenda.remote/.settings
 agenda/agenda.remote/target
+agenda/agenda.server/.classpath
+agenda/agenda.server/.project
+agenda/agenda.server/.settings
+agenda/agenda.server/target
 agenda/agendaEventSelection.client/.classpath
 agenda/agendaEventSelection.client/.project
 agenda/agendaEventSelection.client/.settings
