agenda config files updated

--- a/agenda/agenda.runner/runner/felix/system.properties
+++ b/agenda/agenda.runner/runner/felix/system.properties
@@ -1,4 +1,10 @@
-felix.log.level=3
+#Value		Log Level
+#0			None
+#1(default)	Error
+#2			Warning
+#3			Information
+#4			Debug
+felix.log.level=4
 user.language=en
 osgi.noShutdown=true
 org.universAAL.middleware.peer.is_coordinator=true
