--- a/agenda/agenda.runner/runner/configurations/agenda/credentials.properties
+++ b/agenda/agenda.runner/runner/configurations/agenda/credentials.properties
@@ -1,3 +1,3 @@
-database=jdbc:mysql://localhost/agendauniversaaldb?useUnicode=yes&characterEncoding=UTF-8
-username=root
-password=sc2011
+database=jdbc:mysql://localhost:3306/agendauniversaaldb?useUnicode=yes&characterEncoding=UTF-8
+username=agendauser
+password=pass
