Ontology rename to:  <groupId>org.universaal.ontology.health</groupId>  <artifactId>ont.health</artifactId>

--- a/health/health.manager/pom.xml
+++ b/health/health.manager/pom.xml
@@ -46,8 +46,8 @@
 			<artifactId>org.osgi.compendium</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.universAAL.AALapplication</groupId>
-			<artifactId>health.ont</artifactId>
+			<groupId>org.universaal.ontology.health</groupId>
+			<artifactId>ont.health</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
