--- a/health/health.motivation/pom.xml
+++ b/health/health.motivation/pom.xml
@@ -34,8 +34,8 @@
 			<artifactId>mw.bus.service</artifactId>
 		</dependency>
 		<dependency>
-        	<groupId>org.universAAL.AALapplication</groupId>
-        	<artifactId>health.ont</artifactId>
+        	<groupId>org.universaal.ontology.health</groupId>
+			<artifactId>ont.health</artifactId>
         </dependency>
 		<dependency>
             <groupId>org.drools</groupId>
