--- a/health/health.treat.manager/pom.xml
+++ b/health/health.treat.manager/pom.xml
@@ -21,8 +21,8 @@
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.universAAL.AALapplication</groupId>
-			<artifactId>health.ont</artifactId>
+			<groupId>org.universaal.ontology.health</groupId>
+			<artifactId>ont.health</artifactId>
 		</dependency>
 	</dependencies>
 
