--- a/.gitignore
+++ b/.gitignore
@@ -72,10 +72,6 @@ health/health.motivation/.project
 health/health.motivation/.settings
 health/health.motivation/src/main/resources/rules/*.brl
 health/health.motivation/target
-health/health.ont/.classpath
-health/health.ont/.project
-health/health.ont/.settings
-health/health.ont/target
 health/health.treat.logger/.classpath
 health/health.treat.logger/.project
 health/health.treat.logger/.settings
@@ -84,6 +80,10 @@ health/health.treat.manager/.classpath
 health/health.treat.manager/.project
 health/health.treat.manager/.settings
 health/health.treat.manager/target
+health/ont.health/.classpath
+health/ont.health/.project
+health/ont.health/.settings
+health/ont.health/target
 health/pom/.project
 health/pom/.settings
 help_when_out/hwo.mobile/.classpath
