--- a/.gitattributes
+++ b/.gitattributes
@@ -381,15 +381,11 @@ agenda/agenda.runner/runner/configurations/ui.dm/main_menu_saied_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_tester.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_tester_en.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_tester_es.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm/messages.properties -text
-agenda/agenda.runner/runner/configurations/ui.dm/messages_de.properties -text
-agenda/agenda.runner/runner/configurations/ui.dm/messages_en.properties -text
-agenda/agenda.runner/runner/configurations/ui.dm/messages_es.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm/messages_hr.properties -text
 agenda/agenda.runner/runner/configurations/ui.handler.gui/formsPrototypeProperties.properties -text
 agenda/agenda.runner/runner/configurations/ui.handler.gui/formsPrototypes.properties -text
 agenda/agenda.runner/runner/configurations/ui.handler.gui/guiMessages_en_US.properties -text
-agenda/agenda.runner/runner/deploy-pom.xml -text
+agenda/agenda.runner/runner/configurations/ui.handler.sms/account.properties -text
 agenda/agenda.runner/runner/felix/config.ini -text
 agenda/agenda.runner/runner/felix/system.properties -text
 agenda/agenda.runner/runner/remoteDebug.bat -text
