--- a/agenda/agenda.runner/pom.xml
+++ b/agenda/agenda.runner/pom.xml
@@ -40,32 +40,98 @@
 <!--	    <provision>mvn:org.universAAL.samples/smp.lighting.client/1.0.0</provision> -->
 <!-- 		<provision>mvn:org.universAAL.samples/smp.heating/1.0.0</provision> -->
 	    
-<!--		RUN AGENDA	-->
-		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.io/1.0.0/composite</provision>
-		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.0/composite</provision>
-		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.context/1.0.0/composite</provision>
-		<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.0.0/composite</provision> 
-		<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui/1.0.0/composite</provision> 
- 		<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.0.0/composite</provision> 
-	    <provision>scan-composite:mvn:org.universAAL.ontology/ont.phWorld/1.0.0/composite</provision>
-	    <provision>mvn:org.universAAL.ontology/ont.profile/1.0.0</provision>
-	    <provision>mvn:org.universAAL.AALapplication/agenda.client/1.0.1-SNAPSHOT</provision>
-		<provision>mvn:org.universAAL.AALapplication/agenda.server/1.0.1-SNAPSHOT</provision>
-		<provision>mvn:org.universAAL.AALapplication/agenda.gui/1.0.1-SNAPSHOT</provision>
-		<provision>mvn:org.universAAL.AALapplication/agenda.remote/1.0.1-SNAPSHOT</provision>
-		<provision>mvn:org.universAAL.AALapplication/agenda.ont/1.0.1-SNAPSHOT</provision>
-		<provision>mvn:org.universAAL.AALapplication/agendaEventSelection.ont/1.0.1-SNAPSHOT</provision>
-		<provision>mvn:org.universAAL.AALapplication/agendaEventSelection.client/1.0.1-SNAPSHOT</provision>
-		<provision>mvn:org.universAAL.AALapplication/agendaEventSelection.server/1.0.1-SNAPSHOT</provision>
-   		<provision>wrap:mvn:mysql/mysql-connector-java/5.1.17</provision>
+<!--		RUN AGENDA	BEGIN -->
+<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.io/1.0.0/composite</provision>-->
+<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.0/composite</provision>-->
+<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.context/1.0.0/composite</provision>-->
+<!--		<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.0.0/composite</provision> -->
+<!--		<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui/1.0.0/composite</provision> -->
+<!-- 		<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.0.0/composite</provision> -->
+<!--	    <provision>scan-composite:mvn:org.universAAL.ontology/ont.phWorld/1.0.0/composite</provision>-->
+<!--	    <provision>mvn:org.universAAL.ontology/ont.profile/1.0.0</provision>-->
+<!--	    <provision>mvn:org.universAAL.AALapplication/agenda.client/1.0.1-SNAPSHOT</provision>-->
+<!--		<provision>mvn:org.universAAL.AALapplication/agenda.server/1.0.1-SNAPSHOT</provision>-->
+<!--		<provision>mvn:org.universAAL.AALapplication/agenda.gui/1.0.1-SNAPSHOT</provision>-->
+<!--		<provision>mvn:org.universAAL.AALapplication/agenda.remote/1.0.1-SNAPSHOT</provision>-->
+<!--		<provision>mvn:org.universAAL.AALapplication/agenda.ont/1.0.1-SNAPSHOT</provision>-->
+<!--		<provision>mvn:org.universAAL.AALapplication/agendaEventSelection.ont/1.0.1-SNAPSHOT</provision>-->
+<!--		<provision>mvn:org.universAAL.AALapplication/agendaEventSelection.client/1.0.1-SNAPSHOT</provision>-->
+<!--		<provision>mvn:org.universAAL.AALapplication/agendaEventSelection.server/1.0.1-SNAPSHOT</provision>-->
+<!--   		<provision>wrap:mvn:mysql/mysql-connector-java/5.1.17</provision>-->
+   		 		<!--		RUN AGENDA	END -->
 <!--    	-->
 <!--    	<provision>wrap:mvn:com.hp.hpl.jena/jena/2.5.4</provision>-->
 <!--    	<provision>wrap:mvn:com.hp.hpl.jena/arq/2.5.0</provision>-->
 <!--		<provision>mvn:org.universAAL.context/ctxt.jena.converter/0.3.1-SNAPSHOT</provision>-->
 
-<!--		RUN ANDREJ TEST	-->
+<!--		RUN ANDREJ TEST	BEGIN-->
 <!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.0/composite</provision>-->
 <!--		<provision>mvn:org.universAAL.andrej/andrej.test/0.1.0-SNAPSHOT</provision>-->
+<!--		RUN ANDREJ TEST END -->
+
+<!--		RUN WEB HANDLER	BEGIN-->
+<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.ui/1.0.1-SNAPSHOT/composite</provision>-->
+<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.1-SNAPSHOT/composite</provision>-->
+<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.context/1.0.1-SNAPSHOT/composite</provision>-->
+<!---->
+<!--	    <provision>wrap:mvn:com.hp.hpl.jena/jena/2.5.4</provision>-->
+<!--	    <provision>mvn:org.universAAL.context/ctxt.jena.converter/1.0.2-SNAPSHOT</provision>-->
+<!--		<provision>mvn:org.universAAL.ui/ui.dm/1.0.2-SNAPSHOT</provision>-->
+<!--		<provision>org.universAAL.remote-interoperability/ri.servicegateway/1.0.2-SNAPSHOT</provision>-->
+<!-- 	    <provision>mvn:org.universAAL.ontology/ont.phWorld/1.0.0</provision>-->
+<!--	    <provision>mvn:org.universAAL.ontology/ont.profile/1.0.0</provision> -->
+<!--		<provision>mvn:org.universAAL.ui/ui.handler.web/1.0.2-SNAPSHOT</provision> -->
+<!--		<provision>wrap:mvn:mysql/mysql-connector-java/5.1.17</provision>-->
+<!--	    <provision>wrap:mvn:com.hp.hpl.jena/arq/2.5.0</provision>-->
+<!--		RUN WEB HANDLER	END-->
+
+<!--		RUN WEB HANDLER	with AUTHORIZATOR BEGIN-->
+		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.ui/1.0.1-SNAPSHOT/composite</provision>
+		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.1-SNAPSHOT/composite</provision>
+		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.context/1.0.1-SNAPSHOT/composite</provision>
+		
+		<provision>scan-composite:mvn:org.universAAL.ontology/ont.phWorld/1.0.1-SNAPSHOT/composite</provision>
+		<provision>mvn:org.universAAL.ontology/ont.profile/1.0.1-SNAPSHOT</provision>
+		
+	    <provision>wrap:mvn:com.hp.hpl.jena/jena/2.5.4</provision>
+	    <provision>mvn:org.universAAL.context/ctxt.jena.converter/1.0.2-SNAPSHOT</provision>
+	    <provision>wrap:mvn:mysql/mysql-connector-java/5.1.17</provision>
+	    <provision>wrap:mvn:com.hp.hpl.jena/arq/2.5.0</provision>
+	    <provision>mvn:org.universAAL.ui/ui.dm/1.0.2-SNAPSHOT</provision>
+	
+
+<!--		<provision>wrap:org.universAAL.samples/service.utils/0.3.0-SNAPSHOT</provision>-->
+		<provision>mvn:org.universAAL.ui/security.authorizator/1.0.2-SNAPSHOT</provision>
+		<provision>scan-composite:mvn:org.universAAL.remote-interoperability/ri.servicegateway/1.0.2-SNAPSHOT/composite</provision>
+		<provision>mvn:org.universAAL.ui/ui.handler.web/1.0.2-SNAPSHOT</provision> 
+		
+<!--		RUN WEB HANDLER	without AUTHORIZATOR BEGIN-->
+
+<!--		RUN SMS HANDLER	START-->
+<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.ui/1.0.1-SNAPSHOT/composite</provision>-->
+<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.1-SNAPSHOT/composite</provision>-->
+<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.context/1.0.1-SNAPSHOT/composite</provision>-->
+<!--		<provision>wrap:mvn:mysql/mysql-connector-java/5.1.17</provision>-->
+<!--	    -->
+<!--	    <provision>wrap:mvn:com.hp.hpl.jena/jena/2.5.4</provision>  -->
+<!--	    <provision>wrap:mvn:com.hp.hpl.jena/arq/2.5.0</provision>  -->
+<!--		<provision>wrap:mvn:org.universAAL.support/jena.osgi/1.0.0</provision>-->
+<!--	    <provision>mvn:org.universAAL.middleware/mw.container.xfaces/1.0.1-SNAPSHOT</provision>-->
+<!--       	<provision>mvn:org.universAAL.context/ctxt.jena.converter/1.0.2-SNAPSHOT</provision>-->
+<!--           -->
+<!--        <provision>wrap:mvn:jp.go.ipa/jgcl/1.0</provision>-->
+<!--	    <provision>wrap:mvn:java3d/vecmath/1.3.1</provision>-->
+<!--	    <provision>wrap:mvn:org.bouncycastle/jce.jdk13/144</provision>-->
+<!--        <provision>mvn:org.universAAL.ontology/ont.profile/1.0.1-SNAPSHOT</provision>-->
+<!--   	   -->
+<!--	    <provision>wrap:mvn:java3d/j3d-core/1.3.1</provision>-->
+<!--	    <provision>mvn:org.universAAL.ontology/ont.phWorld/1.0.1-SNAPSHOT</provision>-->
+<!--	    -->
+<!--		<provision>mvn:org.universAAL.ui/ui.dm/1.0.2-SNAPSHOT</provision>-->
+<!---->
+<!--		<provision>mvn:org.universAAL.ui/ui.handler.sms/1.0.2-SNAPSHOT</provision>-->
+<!--		<provision>mvn:org.universAAL.ui/ui.handler.sms.tester/1.0.2-SNAPSHOT</provision>-->
+<!--		RUN SMS HANDLER	END--> 
 
 		<!-- Whatever you want, like: -->
 	    <!-- <provision>{opt:wrap}:mvn:{groupId}/{artifactId}/{version}@{opt:#level | nostart | noupdate}</provision> -->
