--- a/agenda/agenda.runner/runner/felix/config.ini
+++ b/agenda/agenda.runner/runner/felix/config.ini
@@ -26,47 +26,42 @@ felix.auto.start.1=\
 "file:bundles/org.apache.felix.gogo.runtime_0.10.0.jar" \
 "file:bundles/org.apache.felix.gogo.shell_0.10.0.jar"
 felix.auto.start.5=\
+"file:bundles/wrap_mvn_org.bouncycastle_jce.jdk13_144_0.jar" \
+"file:bundles/mw.container.xfaces_1.0.1.SNAPSHOT.jar" \
+"file:bundles/org.ops4j.pax.logging.pax-logging-api_1.6.2.jar" \
+"file:bundles/org.ops4j.pax.logging.pax-logging-service_1.6.2.jar" \
 "file:bundles/org.osgi.compendium_4.1.0.jar" \
 "file:bundles/org.apache.felix.log_1.0.1.jar" \
 "file:bundles/org.apache.felix.configadmin_1.2.4.jar" \
 "file:bundles/org.apache.felix.fileinstall_3.1.10.jar" \
-"file:bundles/org.ops4j.pax.logging.pax-logging-api_1.6.2.jar" \
-"file:bundles/org.ops4j.pax.logging.pax-logging-service_1.6.2.jar" \
 "file:bundles/org.ops4j.pax.configmanager_0.2.2.jar" \
-"file:bundles/mw.container.xfaces_1.0.0.jar" \
-"file:bundles/mw.container.osgi_1.0.0.jar" \
-"file:bundles/mw.data.representation_1.0.0.jar" \
-"file:bundles/wrap_mvn_org.bouncycastle_jce.jdk13_144_0.jar" \
-"file:bundles/mw.acl.interfaces_1.0.0.jar" \
-"file:bundles/mw.acl.upnp_1.0.0.jar" \
+"file:bundles/mw.container.osgi_1.0.1.SNAPSHOT.jar" \
+"file:bundles/mw.acl.interfaces_1.0.1.SNAPSHOT.jar" \
+"file:bundles/mw.acl.upnp_1.0.1.SNAPSHOT.jar" \
 "file:bundles/org.apache.felix.upnp.basedriver_0.8.0.jar" \
-"file:bundles/mw.bus.model_1.0.0.jar" \
-"file:bundles/mw.bus.io_1.0.0.jar" \
-"file:bundles/mw.bus.service_1.0.0.jar" \
-"file:bundles/mw.bus.context_1.0.0.jar" \
+"file:bundles/mw.bus.model_1.0.1.SNAPSHOT.jar" \
+"file:bundles/mw.data.representation_1.0.1.SNAPSHOT.jar" \
+"file:bundles/mw.bus.ui_1.0.1.SNAPSHOT.jar" \
+"file:bundles/mw.bus.service_1.0.1.SNAPSHOT.jar" \
+"file:bundles/mw.bus.context_1.0.1.SNAPSHOT.jar" \
 "file:bundles/wrap_mvn_java3d_j3d-core_1.3.1_0.jar" \
 "file:bundles/wrap_mvn_java3d_vecmath_1.3.1_0.jar" \
 "file:bundles/wrap_mvn_jp.go.ipa_jgcl_1.0_0.jar" \
-"file:bundles/ont.phWorld_1.0.0.jar" \
-"file:bundles/ont.profile_1.0.0.jar" \
-"file:bundles/ui.dm.mobile_1.0.0.jar" \
-"file:bundles/ui.handler.gui_1.0.0.jar" \
+"file:bundles/ont.phWorld_1.0.1.SNAPSHOT.jar" \
+"file:bundles/ont.profile_1.0.1.SNAPSHOT.jar" \
+"file:bundles/wrap_mvn_com.hp.hpl.jena_jena_2.5.4_0.jar" \
+"file:bundles/ctxt.jena.converter_1.0.2.SNAPSHOT.jar" \
+"file:bundles/com.mysql.jdbc_5.1.17.jar" \
+"file:bundles/wrap_mvn_com.hp.hpl.jena_arq_2.5.0_0.jar" \
+"file:bundles/ui.dm_1.0.2.SNAPSHOT.jar" \
+"file:bundles/security.authorizator_1.0.2.SNAPSHOT.jar" \
 "file:bundles/org.apache.felix.javax.servlet_1.0.0.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-jetty-bundle_1.0.3.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-api_1.0.3.jar" \
-"file:bundles/ri.servicegateway_1.0.0.jar" \
-"file:bundles/ui.handler.web_1.0.0.jar" \
-"file:bundles/ont.profile_1.0.0.jar" \
-"file:bundles/agenda.client_1.0.1.SNAPSHOT.jar" \
-"file:bundles/agenda.server_1.0.1.SNAPSHOT.jar" \
-"file:bundles/agenda.gui_1.0.1.SNAPSHOT.jar" \
-"file:bundles/agenda.remote_1.0.1.SNAPSHOT.jar" \
-"file:bundles/agenda.ont_1.0.1.SNAPSHOT.jar" \
-"file:bundles/agendaEventSelection.ont_1.0.1.SNAPSHOT.jar" \
-"file:bundles/agendaEventSelection.client_1.0.1.SNAPSHOT.jar" \
-"file:bundles/agendaEventSelection.server_1.0.1.SNAPSHOT.jar" \
-"file:bundles/com.mysql.jdbc_5.1.17.jar"
+"file:bundles/ri.servicegateway_1.0.2.SNAPSHOT.jar" \
+"file:bundles/ui.handler.web_1.0.2.SNAPSHOT.jar"
 
 ##############################
 # System properties
 ##############################
+maven.test.skip=true
