--- a/agenda/agenda.server/pom.xml
+++ b/agenda/agenda.server/pom.xml
@@ -50,13 +50,6 @@
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
 		</dependency>
-
-		<!--	///// PERSONA-->
-		<!--		<dependency>-->
-		<!--			<groupId>org.aal-persona.middleware</groupId>-->
-		<!--			<artifactId>cdc.support</artifactId>-->
-		<!--		</dependency>-->
-		<!--	///// PERSONA-->
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
@@ -64,15 +57,7 @@
 		<dependency>
 			<groupId>org.universAAL.AALapplication</groupId>
 			<artifactId>agenda.ont</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
-			<scope>provided</scope>
 		</dependency>
-		<!--		-->
-		<!--		<dependency>-->
-		<!--			<groupId>org.aal-persona.platform</groupId>-->
-		<!--			<artifactId>casf.ont</artifactId>-->
-		<!--			<version>0.2.0-SNAPSHOT</version>-->
-		<!--		</dependency>-->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -141,7 +126,8 @@
 							org.universAAL.agenda.ont.service,
 
 							java.sql.*, javax.swing,
-							org.osgi.service.*, org.osgi.framework, javax.xml.*,
+							org.osgi.service.*, org.osgi.framework,
+							javax.xml.*,
 							com.mysql.jdbc, org.slf4j</Import-Package>
 					</instructions>
 				</configuration>
