--- a/agenda/agendaEventSelection.client/pom.xml
+++ b/agenda/agendaEventSelection.client/pom.xml
@@ -27,17 +27,6 @@
 			<artifactId>org.osgi.compendium</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.ops4j.pax.logging</groupId>
-			<artifactId>pax-logging-api</artifactId>
-			<version>1.6.2</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.ops4j.pax.logging</groupId>
-			<artifactId>pax-logging-service</artifactId>
-			<version>1.6.2</version>
-		</dependency>
-		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context</artifactId>
 		</dependency>
@@ -64,12 +53,21 @@
 		<dependency>
 			<groupId>org.universAAL.AALapplication</groupId>
 			<artifactId>agenda.ont</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.AALapplication</groupId>
 			<artifactId>agendaEventSelection.ont</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ops4j.pax.logging</groupId>
+			<artifactId>pax-logging-api</artifactId>
+			<version>1.6.2</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ops4j.pax.logging</groupId>
+			<artifactId>pax-logging-service</artifactId>
+			<version>1.6.2</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -85,30 +83,38 @@
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package> org.universAAL.agendaEventSelectionTool.client</Export-Package>
-<!--						<Import-Package>org.universAAL.middleware.context,org.universAAL.middleware.context.owl,-->
-<!--							org.universAAL.middleware.input,-->
-<!--							org.universAAL.middleware.io.owl,-->
-<!--							org.universAAL.middleware.io.rdf,-->
-<!--							org.universAAL.middleware.output, org.universAAL.middleware.owl,-->
-<!--							org.universAAL.middleware.owl.supply,-->
-<!--							org.universAAL.middleware.rdf, org.universAAL.middleware.service,-->
-<!--							org.universAAL.middleware.service.owl,-->
-<!--							org.universAAL.middleware.service.owls.process,-->
-<!--							org.universAAL.middleware.service.owls.profile,-->
-<!--							org.universAAL.middleware.util, org.universAAL.ontology.profile,-->
-<!--							org.universAAL.ontology.location.address,-->
-<!--							org.universAAL.ontology.location.outdoor,-->
+						<!--
+							<Import-Package>org.universAAL.middleware.context,org.universAAL.middleware.context.owl,
+						-->
+						<!--							org.universAAL.middleware.input,-->
+						<!--							org.universAAL.middleware.io.owl,-->
+						<!--							org.universAAL.middleware.io.rdf,-->
+						<!--
+							org.universAAL.middleware.output, org.universAAL.middleware.owl,
+						-->
+						<!--							org.universAAL.middleware.owl.supply,-->
+						<!--
+							org.universAAL.middleware.rdf, org.universAAL.middleware.service,
+						-->
+						<!--							org.universAAL.middleware.service.owl,-->
+						<!--							org.universAAL.middleware.service.owls.process,-->
+						<!--							org.universAAL.middleware.service.owls.profile,-->
+						<!--
+							org.universAAL.middleware.util, org.universAAL.ontology.profile,
+						-->
+						<!--							org.universAAL.ontology.location.address,-->
+						<!--							org.universAAL.ontology.location.outdoor,-->
 <!---->
-<!--							org.universAAL.agenda.ont,-->
-<!--							org.universAAL.agenda.ont.service,-->
-<!--							org.universAAL.agendaEventSelectionTool.ont,-->
-<!--							org.universAAL.agendaEventSelectionTool.ont.service,-->
+						<!--							org.universAAL.agenda.ont,-->
+						<!--							org.universAAL.agenda.ont.service,-->
+						<!--							org.universAAL.agendaEventSelectionTool.ont,-->
+						<!--							org.universAAL.agendaEventSelectionTool.ont.service,-->
 <!---->
-<!--							java.sql.*,-->
-<!--							javax.swing,-->
-<!--							org.osgi.service.*, org.osgi.framework, javax.xml.*,-->
-<!--							com.mysql.jdbc,-->
-<!--							org.slf4j</Import-Package>-->
+						<!--							java.sql.*,-->
+						<!--							javax.swing,-->
+						<!--							org.osgi.service.*, org.osgi.framework, javax.xml.*,-->
+						<!--							com.mysql.jdbc,-->
+						<!--							org.slf4j</Import-Package>-->
 					</instructions>
 				</configuration>
 			</plugin>
