--- a/agenda/agendaEventSelection.server/pom.xml
+++ b/agenda/agendaEventSelection.server/pom.xml
@@ -46,11 +46,6 @@
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
 		</dependency>
-		<!--		<dependency>-->
-		<!--			<groupId>org.aal-persona.middleware</groupId>-->
-		<!--			<artifactId>cdc.support</artifactId>-->
-		<!--		</dependency>-->
-
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
@@ -58,14 +53,10 @@
 		<dependency>
 			<groupId>org.universAAL.AALapplication</groupId>
 			<artifactId>agenda.ont</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.AALapplication</groupId>
 			<artifactId>agendaEventSelection.ont</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -80,7 +71,6 @@
 			<groupId>org.ops4j.pax.logging</groupId>
 			<artifactId>pax-logging-api</artifactId>
 			<version>1.6.2</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.ops4j.pax.logging</groupId>
@@ -103,46 +93,46 @@
 						<Export-Package> org.universAAL.agendaEventSelectionTool.server</Export-Package>
 						<Private-Package>org.universAAL.agendaEventSelectionTool.server.impl,
 							org.universAAL.agendaEventSelectionTool.database</Private-Package>
+						<!--
+							although by default all packages should be automatically imported
+							(and added to MANIFEST) when not explicitly having Import-Package
+							section, this is for some not the case for com.mysql.jdbc in this
+							bundle
+						-->
+						<Import-Package>
+							org.universAAL.middleware.container,
+							org.universAAL.middleware.container.osgi,
+							org.universAAL.middleware.container.osgi.util,
+							org.universAAL.middleware.context,
+							org.universAAL.middleware.context.owl,
+							org.universAAL.middleware.owl,
+							org.universAAL.middleware.rdf,
+							org.universAAL.middleware.service,
+							org.universAAL.middleware.service.owls.process,
+							org.universAAL.middleware.service.owls.profile,
 
-<!--						<Import-Package>org.universAAL.middleware.context,-->
-<!--							org.universAAL.middleware.context.owl,-->
-<!--							org.universAAL.middleware.input,-->
-<!--							org.universAAL.middleware.io.owl,-->
-<!--							org.universAAL.middleware.io.rdf,-->
-<!--							org.universAAL.middleware.output,-->
-<!--							org.universAAL.middleware.owl,-->
-<!--							org.universAAL.middleware.owl.supply,-->
-<!--							org.universAAL.middleware.rdf, org.universAAL.middleware.service,-->
-<!--							org.universAAL.middleware.service.owls.process,-->
-<!--							org.universAAL.middleware.service.owls.profile,-->
-<!--							org.universAAL.middleware.util,-->
-<!--							org.universAAL.ontology.profile,-->
-<!--							org.universAAL.ontology.location.address,-->
-<!--							org.universAAL.ontology.location.outdoor,-->
-<!---->
-<!--							org.universAAL.agenda.ont,-->
-<!--							org.universAAL.agenda.ont.service,-->
-<!--							org.universAAL.agendaEventSelectionTool.ont,-->
-<!--							org.universAAL.agendaEventSelectionTool.ont.service,-->
-<!---->
-<!--							java.sql.*,-->
-<!--							javax.swing,-->
-<!--							org.osgi.service.*,-->
-<!--							org.osgi.framework, javax.xml.*,-->
-<!--							com.mysql.jdbc,-->
-<!--							org.slf4j</Import-Package>-->
+							org.universAAL.agenda.ont,
+							org.universAAL.agenda.ont.service,
+							org.universAAL.agendaEventSelectionTool.ont,
+							org.universAAL.agendaEventSelectionTool.ont.service,
+
+							java.sql.*,
+							org.osgi.framework,
+							com.mysql.jdbc,
+							javax.xml.datatype,
+							org.slf4j</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<compilerArguments>
-						<bootclasspath>${java.home}\lib\rt.jar</bootclasspath>
-					</compilerArguments>
-				</configuration>
-			</plugin>
+			<!--			<plugin>-->
+			<!--				<groupId>org.apache.maven.plugins</groupId>-->
+			<!--				<artifactId>maven-compiler-plugin</artifactId>-->
+			<!--				<configuration>-->
+			<!--					<compilerArguments>-->
+			<!--						<bootclasspath>${java.home}\lib\rt.jar</bootclasspath>-->
+			<!--					</compilerArguments>-->
+			<!--				</configuration>-->
+			<!--			</plugin>-->
 		</plugins>
 	</build>
 </project>
