--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ agenda/agenda.client/.classpath
 agenda/agenda.client/.project
 agenda/agenda.client/.settings
 agenda/agenda.client/target
+agenda/agenda.eventSelection.client/.classpath
+agenda/agenda.eventSelection.client/.project
+agenda/agenda.eventSelection.client/.settings
+agenda/agenda.eventSelection.client/target
 agenda/agenda.gui/.classpath
 agenda/agenda.gui/.project
 agenda/agenda.gui/.settings
@@ -27,10 +31,6 @@ agenda/agenda.server/.classpath
 agenda/agenda.server/.project
 agenda/agenda.server/.settings
 agenda/agenda.server/target
-agenda/agendaEventSelection.client/.classpath
-agenda/agendaEventSelection.client/.project
-agenda/agendaEventSelection.client/.settings
-agenda/agendaEventSelection.client/target
 agenda/agendaEventSelection.ont/.classpath
 agenda/agendaEventSelection.ont/.project
 agenda/agendaEventSelection.ont/.settings
