--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ agenda/agenda.eventSelection.client/.classpath
 agenda/agenda.eventSelection.client/.project
 agenda/agenda.eventSelection.client/.settings
 agenda/agenda.eventSelection.client/target
+agenda/agenda.eventSelection.ont/.classpath
+agenda/agenda.eventSelection.ont/.project
+agenda/agenda.eventSelection.ont/.settings
+agenda/agenda.eventSelection.ont/target
 agenda/agenda.gui/.classpath
 agenda/agenda.gui/.project
 agenda/agenda.gui/.settings
@@ -31,10 +35,6 @@ agenda/agenda.server/.classpath
 agenda/agenda.server/.project
 agenda/agenda.server/.settings
 agenda/agenda.server/target
-agenda/agendaEventSelection.ont/.classpath
-agenda/agendaEventSelection.ont/.project
-agenda/agendaEventSelection.ont/.settings
-agenda/agendaEventSelection.ont/target
 agenda/agendaEventSelection.server/.classpath
 agenda/agendaEventSelection.server/.project
 agenda/agendaEventSelection.server/.settings
