--- a/agenda/agenda.runner/pom.xml
+++ b/agenda/agenda.runner/pom.xml
@@ -41,24 +41,27 @@
 <!-- 		<provision>mvn:org.universAAL.samples/smp.heating/1.0.0</provision>-->
 	    
 <!--		RUN AGENDA	BEGIN -->
-<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.io/1.0.0/composite</provision>-->
-<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.0/composite</provision>-->
-<!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.context/1.0.0/composite</provision>-->
-<!--		<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.0.0/composite</provision>-->
-<!--		<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui/1.0.0/composite</provision>-->
-<!-- 		<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.0.0/composite</provision>-->
-<!--	    <provision>scan-composite:mvn:org.universAAL.ontology/ont.phWorld/1.0.0/composite</provision>-->
-<!--	    <provision>mvn:org.universAAL.ontology/ont.profile/1.0.0</provision>-->
-<!--	    <provision>mvn:org.universAAL.AALapplication/agenda.client/1.0.1-SNAPSHOT</provision>-->
-<!--		<provision>mvn:org.universAAL.AALapplication/agenda.server/1.0.1-SNAPSHOT</provision>-->
-<!--		<provision>mvn:org.universAAL.AALapplication/agenda.gui/1.0.1-SNAPSHOT</provision>-->
-<!--		<provision>mvn:org.universAAL.AALapplication/agenda.remote/1.0.1-SNAPSHOT</provision>-->
-<!--		<provision>mvn:org.universAAL.AALapplication/agenda.ont/1.0.1-SNAPSHOT</provision>-->
-<!--		<provision>mvn:org.universAAL.AALapplication/agendaEventSelection.ont/1.0.1-SNAPSHOT</provision>-->
-<!--		<provision>mvn:org.universAAL.AALapplication/agendaEventSelection.client/1.0.1-SNAPSHOT</provision>-->
-<!--		<provision>mvn:org.universAAL.AALapplication/agendaEventSelection.server/1.0.1-SNAPSHOT</provision>-->
-<!--   		<provision>wrap:mvn:mysql/mysql-connector-java/5.1.17</provision>-->
-   		 		<!--		RUN AGENDA	END -->
+		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.io/1.0.0/composite</provision>
+		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.0/composite</provision>
+		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.context/1.0.0/composite</provision>
+		<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.0.0/composite</provision>
+		<provision>wrap:mvn:mysql/mysql-connector-java/5.1.17</provision>
+	    <provision>scan-composite:mvn:org.universAAL.ontology/ont.phWorld/1.0.0/composite</provision>
+	    <provision>mvn:org.universAAL.ontology/ont.profile/1.0.0</provision>
+	    <provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui/1.0.0/composite</provision>
+ 		<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.0.0/composite</provision>
+	    
+	    <provision>mvn:org.universAAL.ontology/agenda.ont/1.0.1-SNAPSHOT</provision>
+	    <provision>mvn:org.universAAL.ontology/agenda.eventSelection.ont/1.0.1-SNAPSHOT</provision>
+	    
+	    <provision>mvn:org.universAAL.AALapplication/agenda.client/A.0.1-SNAPSHOT</provision>
+		<provision>mvn:org.universAAL.AALapplication/agenda.server/A.0.1-SNAPSHOT</provision>
+		<provision>mvn:org.universAAL.AALapplication/agenda.gui/A.0.1-SNAPSHOT</provision>
+		<provision>mvn:org.universAAL.AALapplication/agenda.remote/A.0.1-SNAPSHOT</provision>
+		<provision>mvn:org.universAAL.AALapplication/agenda.eventSelection.client/A.0.1-SNAPSHOT</provision>
+		<provision>mvn:org.universAAL.AALapplication/agenda.eventSelection.server/A.0.1-SNAPSHOT</provision>
+   		
+ <!--		RUN AGENDA	END -->
 <!--    	-->
 <!--    	<provision>wrap:mvn:com.hp.hpl.jena/jena/2.5.4</provision>-->
 <!--    	<provision>wrap:mvn:com.hp.hpl.jena/arq/2.5.0</provision>-->
@@ -112,37 +115,37 @@
 <!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.service/1.0.1-SNAPSHOT/composite</provision>-->
 <!--		<provision>scan-composite:mvn:org.universAAL.middleware/mw.bus.context/1.0.1-SNAPSHOT/composite</provision>-->
 <!--		<provision>wrap:mvn:mysql/mysql-connector-java/5.1.17</provision>-->
-<!--	    -->
+
 <!--	    <provision>wrap:mvn:com.hp.hpl.jena/jena/2.5.4</provision>  -->
 <!--	    <provision>wrap:mvn:com.hp.hpl.jena/arq/2.5.0</provision>  -->
 <!--		<provision>wrap:mvn:org.universAAL.support/jena.osgi/1.0.0</provision>-->
 <!--	    <provision>mvn:org.universAAL.middleware/mw.container.xfaces/1.0.1-SNAPSHOT</provision>-->
 <!--       	<provision>mvn:org.universAAL.context/ctxt.jena.converter/1.0.2-SNAPSHOT</provision>-->
-<!--           -->
+
 <!--        <provision>wrap:mvn:jp.go.ipa/jgcl/1.0</provision>-->
 <!--	    <provision>wrap:mvn:java3d/vecmath/1.3.1</provision>-->
 <!--	    <provision>wrap:mvn:org.bouncycastle/jce.jdk13/144</provision>-->
 <!--        <provision>mvn:org.universAAL.ontology/ont.profile/1.0.1-SNAPSHOT</provision>-->
-<!--   	   -->
+
 <!--	    <provision>wrap:mvn:java3d/j3d-core/1.3.1</provision>-->
 <!--	    <provision>mvn:org.universAAL.ontology/ont.phWorld/1.0.1-SNAPSHOT</provision>-->
-<!--	    -->
+
 <!--		<provision>mvn:org.universAAL.ui/ui.dm/1.0.2-SNAPSHOT</provision>-->
-<!---->
+
 <!--		<provision>mvn:org.universAAL.ui/ui.handler.sms/1.0.2-SNAPSHOT</provision>-->
 <!--		<provision>mvn:org.universAAL.ui/ui.handler.sms.tester/1.0.2-SNAPSHOT</provision>-->
 <!--		RUN SMS HANDLER	END--> 
 
 <!--		RUN HANDLERS 13.3--> 
 
-		<provision>scan-composite:mvn:org.universAAL.ui/ui.dm/1.1.1-SNAPSHOT/composite</provision> 
+<!--		<provision>scan-composite:mvn:org.universAAL.ui/ui.dm/1.1.1-SNAPSHOT/composite</provision> -->
 <!--	<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.1.1-SNAPSHOT/composite</provision>-->
-	   <provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui/1.1.1-SNAPSHOT/composite</provision>
+<!--	   <provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui/1.1.1-SNAPSHOT/composite</provision>-->
 <!--	   <provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.1.1-SNAPSHOT/composite</provision>-->
 		<!--		RUN HANDLERS	END 13.3--> 
 		 
 		<!-- Whatever you want, like: -->
-	    <!-- <provision>{opt:wrap}:mvn:{groupId}/{artifactId}/{version}@{opt:#level | nostart | noupdate}</provision>-->
+	    <!-- <provision>{opt:wrap}:mvn:{groupId}/{artifactId}/{version}@{opt:#level | nostart | noupdate}</provision>-->
 	 </provision>
         </configuration>	
       </plugin>    	
