relative path to parent POM fix after parent pom rename

--- a/agenda/agenda.gui/pom.xml
+++ b/agenda/agenda.gui/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
 		<version>A.0.1-SNAPSHOT</version>
-		<relativePath>../pom</relativePath>
+		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
 	<artifactId>agenda.gui</artifactId>
 	<packaging>bundle</packaging>
