--- a/agenda/agenda.client/pom.xml
+++ b/agenda/agenda.client/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
 		<version>A.0.1-SNAPSHOT</version>
-		<relativePath>../pom</relativePath>
+		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
 	<artifactId>agenda.client</artifactId>
 	<packaging>bundle</packaging>
