--- a/agenda/agenda.pom/pom.xml
+++ b/agenda/agenda.pom/pom.xml
@@ -24,6 +24,7 @@
 	</scm>
 	<properties>
 		<service.name.svn>agenda</service.name.svn>
+		<ignore.dep.conflict>true</ignore.dep.conflict>
 		<project.build.sourceEncoding>Cp1252</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
@@ -45,6 +46,7 @@
 		<module>../agenda.remote</module>
 		<module>../agenda.eventSelection.server</module>
 		<module>../agenda.eventSelection.client</module>
+		<module>composite</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
@@ -90,4 +92,69 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.felix</groupId>
+					<artifactId>maven-bundle-plugin</artifactId>
+					<extensions>true</extensions>
+					<executions>
+						<execution>
+							<id>bundle-manifest</id>
+							<phase>process-classes</phase>
+							<goals>
+								<goal>manifest</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.universAAL.support</groupId>
+				<artifactId>uaal-maven-plugin</artifactId>
+				<version>1.1.0</version>
+				<executions>
+					<execution>
+						<id>CompositeMojo</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>composite</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>TestMojo</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<id>attach-composite</id>
+						<phase>package</phase>
+						<goals>
+							<goal>attach-artifact</goal>
+						</goals>
+						<configuration>
+							<artifacts>
+								<artifact>
+									<file>target/artifact.composite</file>
+									<type>composite</type>
+								</artifact>
+							</artifacts>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
