--- a/health/pom/pom.xml
+++ b/health/pom/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<version>0.1.0-SNAPSHOT</version>
-		<relativePath>../../pom</relativePath>
+		<relativePath>../../new_services.pom</relativePath>
 	</parent>
 
 	<artifactId>health.pom</artifactId>
