--- a/medication/pom/pom.xml
+++ b/medication/pom/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>new_services.pom</artifactId>
     <version>0.1.0-SNAPSHOT</version>
-    <relativePath>../../pom</relativePath>
+    <relativePath>../../new_services.pom</relativePath>
   </parent>
   <artifactId>medication_manager.pom</artifactId>
   <version>0.1.0-SNAPSHOT</version>
