--- a/personal_safety/pom/pom.xml
+++ b/personal_safety/pom/pom.xml
@@ -5,7 +5,7 @@
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<version>0.1.0-SNAPSHOT</version>
-		<relativePath>../../pom</relativePath>
+		<relativePath>../../new_services.pom</relativePath>
 	</parent>
 
 	<groupId>org.universAAL.AALapplication</groupId>
