--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,8 @@ health/health.motivation/.project
 health/health.motivation/.settings
 health/health.motivation/src/main/resources/rules/*.brl
 health/health.motivation/target
+health/health.pom/.project
+health/health.pom/.settings
 health/health.treat.logger/.classpath
 health/health.treat.logger/.project
 health/health.treat.logger/.settings
