PS internal reubication (WP4 strategy copliant)

--- a/.gitignore
+++ b/.gitignore
@@ -138,39 +138,28 @@ personal_safety/personal_safety.run/runner/cache
 personal_safety/personal_safety.run/runner/felix/cache/runner
 personal_safety/personal_safety.run/runner/log
 personal_safety/personal_safety.run/target
-personal_safety/pom/*.project
-personal_safety/pom/*.settings
-personal_safety/pom/target
-personal_safety/run/.classpath
-personal_safety/run/.project
-personal_safety/run/.settings
-personal_safety/run/runner/bundles
-personal_safety/run/runner/cache
-personal_safety/run/runner/felix/cache/runner
-personal_safety/run/runner/log
-personal_safety/run/target
-personal_safety/service/*.classpath
-personal_safety/service/*.project
-personal_safety/service/*.settings
-personal_safety/service/*.versionsBackup
-personal_safety/service/.classpath
-personal_safety/service/.project
-personal_safety/service/.settings
-personal_safety/service/personal_safety.service.launch
-personal_safety/service/rundir
-personal_safety/service/target
+personal_safety/personal_safety.service/*.classpath
+personal_safety/personal_safety.service/*.project
+personal_safety/personal_safety.service/*.settings
+personal_safety/personal_safety.service/*.versionsBackup
+personal_safety/personal_safety.service/.classpath
+personal_safety/personal_safety.service/.project
+personal_safety/personal_safety.service/.settings
+personal_safety/personal_safety.service/personal_safety.service.launch
+personal_safety/personal_safety.service/rundir
+personal_safety/personal_safety.service/target
+personal_safety/personal_safety.sms.sender/.classpath
+personal_safety/personal_safety.sms.sender/.project
+personal_safety/personal_safety.sms.sender/.settings
+personal_safety/personal_safety.sms.sender/target
+personal_safety/personal_safety.sw.panic/.classpath
+personal_safety/personal_safety.sw.panic/.project
+personal_safety/personal_safety.sw.panic/.settings
+personal_safety/personal_safety.sw.panic/target
 personal_safety/smp.test-location.publisher/.classpath
 personal_safety/smp.test-location.publisher/.project
 personal_safety/smp.test-location.publisher/.settings
 personal_safety/smp.test-location.publisher/target
-personal_safety/sms.sender/.classpath
-personal_safety/sms.sender/.project
-personal_safety/sms.sender/.settings
-personal_safety/sms.sender/target
-personal_safety/sw.panic/.classpath
-personal_safety/sw.panic/.project
-personal_safety/sw.panic/.settings
-personal_safety/sw.panic/target
 safety_home/ont.safetyDevices/.classpath
 safety_home/ont.safetyDevices/.project
 safety_home/ont.safetyDevices/.settings
