--- a/personal_safety/personal_safety.sms.sender/pom.xml
+++ b/personal_safety/personal_safety.sms.sender/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>personal_safety.pom</artifactId>
 		<version>0.2.0-SNAPSHOT</version>
-		<relativePath>../pom</relativePath>
+		<relativePath>../personal_safety.pom</relativePath>
 	</parent>
 	<artifactId>personal_safety.sms</artifactId>
 	<packaging>bundle</packaging>
