--- a/personal_safety/personal_safety.sw.panic/pom.xml
+++ b/personal_safety/personal_safety.sw.panic/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>personal_safety.pom</artifactId>
 		<version>0.2.0-SNAPSHOT</version>
-		<relativePath>../pom</relativePath>
+		<relativePath>../personal_safety.pom</relativePath>
 	</parent>
 
 	<artifactId>personal_safety.sw.panic</artifactId>
