--- a/personal_safety/smp.test-location.publisher/pom.xml
+++ b/personal_safety/smp.test-location.publisher/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>personal_safety.pom</artifactId>
 		<version>0.2.0-SNAPSHOT</version>
-		<relativePath>../pom</relativePath>
+		<relativePath>../personal_safety.pom</relativePath>
 	</parent>
 
   <groupId>org.universAAL.samples</groupId>
