--- a/health/health.manager/pom.xml
+++ b/health/health.manager/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<artifactId>health.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>0.2.0-SNAPSHOT</version>
+		<version>B.0.1-SNAPSHOT</version>
 		<relativePath>../pom/</relativePath>
 	</parent>
 
@@ -46,12 +46,8 @@
 			<artifactId>org.osgi.compendium</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.universaal.ontology.health</groupId>
+			<groupId>org.universaal.ontology</groupId>
 			<artifactId>ont.health</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.io</artifactId>
 		</dependency>
 	</dependencies>
 
