--- a/health/health.motivation/pom.xml
+++ b/health/health.motivation/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>health.pom</artifactId>
-		<version>0.2.0-SNAPSHOT</version>
+		<version>B.0.1-SNAPSHOT</version>
 		<relativePath>../pom/</relativePath>
 	</parent>
 
@@ -34,7 +34,7 @@
 			<artifactId>mw.bus.service</artifactId>
 		</dependency>
 		<dependency>
-        	<groupId>org.universaal.ontology.health</groupId>
+        	<groupId>org.universaal.ontology</groupId>
 			<artifactId>ont.health</artifactId>
         </dependency>
 		<dependency>
