moved Repo to health.pom

--- a/health/health.pom/pom.xml
+++ b/health/health.pom/pom.xml
@@ -73,4 +73,12 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	
+	<repositories>
+        <repository>
+            <id>JBossRepo</id>
+            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
+    
 </project>
