--- a/health/ont.health/pom.xml
+++ b/health/ont.health/pom.xml
@@ -56,7 +56,7 @@
       			<version>1.0.2</version>
     		</dependency>
 			<dependency>
-				<groupId>org.universaal.ontology</groupId>
+				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.healthmeasurement</artifactId>
 				<version>1.1.1-SNAPSHOT</version>
 			</dependency>
